--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -11,7 +11,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   .intro {
     padding: 0 24px;
   }
