--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,7 +10,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   .places {
     padding: 92px 24px 13px;
   }
